; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_benchmark-spawn.c_maybe_spawn.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_benchmark-spawn.c_maybe_spawn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@process_open = common dso_local global i64 0, align 8
@pipe_open = common dso_local global i64 0, align 8
@done = common dso_local global i64 0, align 8
@N = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @maybe_spawn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @maybe_spawn() #0 {
  %1 = load i64, i64* @process_open, align 8
  %2 = icmp eq i64 %1, 0
  br i1 %2, label %3, label %15

3:                                                ; preds = %0
  %4 = load i64, i64* @pipe_open, align 8
  %5 = icmp eq i64 %4, 0
  br i1 %5, label %6, label %15

6:                                                ; preds = %3
  %7 = load i64, i64* @done, align 8
  %8 = add nsw i64 %7, 1
  store i64 %8, i64* @done, align 8
  %9 = load i64, i64* @done, align 8
  %10 = load i64, i64* @N, align 8
  %11 = icmp slt i64 %9, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %6
  %13 = call i32 (...) @spawn()
  br label %14

14:                                               ; preds = %12, %6
  br label %15

15:                                               ; preds = %14, %3, %0
  ret void
}

declare dso_local i32 @spawn(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
